# jraphics

madelbrot/: main.cpp
opengllern/: .gitignore
opengllern/engine1/: .clang-tidy  CMakeLists.txt  CPPLINT.cfg  makefile  makefile.todelete
opengllern/engine1/assets/shaders/: fragmentshader.frag  vertexshader.vert
opengllern/engine1/lib/: camera.h  input.h  load_shader_file.h  loggl.h  mat_math.h  open_gl_window.h  player.h  player_actions_api.h  player_controls.h  quarternion_math.h  technique.h  texture.h  world_transform.h
opengllern/engine1/src/: CMakeLists.txt  camera.cpp  input.cpp  load_shader_file.cpp  loggl.cpp  main.cpp  mat_math.cpp  open_gl_window.cpp  player_controls.cpp  quarternion_math.cpp  stb_image.cpp  technique.cpp  texture.cpp  world_transform.cpp
opengllern/engine1/src/shaders/: vertexshader.vert
opengllern/test1/: test1.cpp
opengllern/test2/: conanbuildinfo.mak  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  makefile
opengllern/test2/lib/: loadShaderFile.h  loggl.h  matMath.h
opengllern/test2/src/: loadShaderFile.cpp  loggl.cpp  main.cpp  matMath.cpp
opengllern/test2/src/shaders/: fragmentshader.frag
raycasting_fps/: demo.map  gamemap.h  main.cpp  map-editor.cpp
